WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303420
[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/006.html -010.html -012.html and -018.html
https://bugs.webkit.org/show_bug.cgi?id=303420
Summary
[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/006.htm...
alan
Reported
2025-12-02 14:33:14 PST
ssia
Attachments
Patch
(14.93 KB, patch)
2025-12-02 15:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.07 KB, patch)
2025-12-02 18:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(17.94 KB, patch)
2025-12-02 19:41 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-02 15:47:32 PST
Created
attachment 477589
[details]
Patch
alan
Comment 2
2025-12-02 18:02:32 PST
Created
attachment 477593
[details]
Patch
alan
Comment 3
2025-12-02 19:41:34 PST
Created
attachment 477594
[details]
[fast-cq]Patch
EWS
Comment 4
2025-12-03 07:24:23 PST
Committed
303831@main
(a6a7f32de48b): <
https://commits.webkit.org/303831@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477594
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-12-03 07:25:15 PST
<
rdar://problem/165762962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug